@@ -1,3 +1,7 @@
+2005-03-01  Jan Beulich  <jbeulich@novell.com>
+
+	* libiberty.h: Declare unlink_if_ordinary.
+
 2005-02-21  Alan Modra  <amodra@bigpond.net.au>
 
 	* xtensa-isa-internal.h (xtensa_length_decode_fn): Warning fix.
